# Zentrix

./: .gitattributes  .gitignore  .typos.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  cleanup.ps1  knowledge.md  run_tests.ps1  test_features.ps1  zenllm.toml
crates/zen-api/: Cargo.toml
crates/zen-api/src/: anthropic.rs  approvals.rs  chat_completion.rs  completion_core.rs  completions.rs  embeddings.rs  files.rs  handler_core.rs  handlers.rs  image_generation.rs  lib.rs  metrics.rs  openai.rs  openapi_doc.rs  responses.rs  route_registry.rs  speech_generation.rs  streaming.rs  types.rs  util.rs  vector.rs  video.rs  zentrix_for_server_builder.rs  zentrix_server_router_builder.rs
crates/zen-api/src/responses_types/: resource.rs
crates/zen-bench/: Cargo.toml
crates/zen-bench-runtime/: Cargo.toml
crates/zen-bench-runtime/src/: main.rs
crates/zen-bench/src/: main.rs
crates/zen-cli/: Cargo.toml
crates/zen-cli/src/: main.rs
crates/zen-cli/src/args/: mod.rs  model.rs  paged_attn.rs  quantize.rs  registry.rs  sandbox.rs  vector.rs
crates/zen-cli/src/commands/: bench.rs  cache.rs  config.rs  doctor.rs  login.rs  mod.rs  models.rs  pull.rs  quant.rs  quantize.rs  serve.rs  status.rs  tune.rs  vector.rs
crates/zen-cli/src/commands/run/: interactive.rs  mod.rs
crates/zen-cli/src/config/: mod.rs
crates/zen-cli/src/registry/: mod.rs
crates/zen-cli/src/ui/: mod.rs  types.rs  utils.rs
crates/zen-cli/src/ui/handlers/: api.rs
crates/zen-cli/webui/: package-lock.json  package.json
crates/zen-core/: Cargo.toml  build.rs
crates/zen-core/src/: diagnostics.rs  distributed.rs  layers.rs  lib.rs  model_loader.rs  ops.rs  perf_flags.rs  request.rs  sampler.rs  sequence.rs  toml_selector.rs  tuning.rs
crates/zen-core/src/amoe/: mod.rs
crates/zen-core/src/attention/: mod.rs
crates/zen-core/src/attention/backends/: flash.rs  metal_flash_attn.rs  naive.rs  sinks.rs
crates/zen-core/src/device_map/: mappers.rs  mod.rs
crates/zen-core/src/diffusion_models/clip/: text.rs
crates/zen-core/src/diffusion_models/flux/: autoencoder.rs  model.rs  stepper.rs
crates/zen-core/src/diffusion_models/t5/: mod.rs
crates/zen-core/src/embedding_models/: embedding_gemma.rs  layers.rs  qwen3_embedding.rs
crates/zen-core/src/engine/: agentic_loop.rs  file_tools.rs  mod.rs  tool_dispatch.rs
crates/zen-core/src/files/: inject.rs
crates/zen-core/src/flexload/: mod.rs
crates/zen-core/src/flexload/runners/: deepseek2.rs  deepseek3.rs  gemma.rs  llama.rs  macros.rs  mistral.rs  mod.rs  phi2.rs  phi3.rs  qwen2.rs
crates/zen-core/src/gdn/: config.rs  layer.rs  norm.rs  weights.rs
crates/zen-core/src/gguf/: content.rs  gguf_tokenizer.rs
crates/zen-core/src/kv_cache/: mod.rs
crates/zen-core/src/lora/: loralinear.rs  mod.rs  qloralinear.rs
crates/zen-core/src/mla/: forward.rs  weights.rs
crates/zen-core/src/models/: deepseek2.rs  deepseek3.rs  gemma.rs  gemma2.rs  glm4.rs  glm4_moe.rs  glm4_moe_lite.rs  gpt_oss.rs  granite.rs  llama.rs  mistral.rs  mixtral.rs  phi2.rs  phi3.rs  phi3_5_moe.rs  quantized_llama.rs  quantized_phi2.rs  quantized_phi3.rs  quantized_qwen.rs  quantized_qwen3.rs  quantized_qwen3_moe.rs  quantized_starcoder2.rs  qwen2.rs  qwen3.rs  qwen3_moe.rs  qwen3_next.rs  smollm3.rs  starcoder2.rs
crates/zen-core/src/moe/: mod.rs
crates/zen-core/src/moe/experts/: backends.rs  checkpoint.rs  config.rs  mod.rs
crates/zen-core/src/paged_attention/: attention_backend.rs
crates/zen-core/src/paged_attention/layers/: paged_attention.rs
crates/zen-core/src/pipeline/: amoe.rs  diffusion.rs  embedding.rs  ggml.rs  gguf.rs  hf.rs  isq.rs  isq_flow.rs  macros.rs  mod.rs  multimodal.rs  normal.rs  paths.rs  sampling.rs  speech.rs
crates/zen-core/src/pipeline/loaders/: diffusion_loaders.rs  embedding_loaders.rs  mod.rs  multimodal_loaders.rs  normal_loaders.rs
crates/zen-core/src/search/: mod.rs  rag.rs  vector.rs
crates/zen-core/src/speech_models/dia/: dac.rs  mod.rs  model.rs
crates/zen-core/src/tools/: grammar.rs  mod.rs  request.rs  response.rs
crates/zen-core/src/tools/parsers/: gemma4.rs  gemma4_strict.rs  qwen.rs
crates/zen-core/src/topology/: mod.rs
crates/zen-core/src/utils/: debug.rs  env.rs  gguf_metadata.rs  memory_usage.rs  mod.rs  model_config.rs  normal.rs  progress.rs  tiktoken.rs  unvarbuilder.rs  varbuilder_utils.rs
crates/zen-core/src/vision_models/: clip.rs  siglip.rs
crates/zen-core/src/xlora_models/: classifier.rs  gemma.rs  gemma2.rs  llama.rs  mistral.rs  mixtral.rs  phi2.rs  phi3.rs  quantized_llama.rs  quantized_phi3.rs  starcoder2.rs
crates/zen-hardware/: Cargo.toml
crates/zen-hardware/src/: lib.rs
crates/zen-host/: Cargo.toml
crates/zen-host/src/: interactive_mode.rs  main.rs  mcp_server.rs
crates/zen-kernels-onnx/: Cargo.toml
crates/zen-kernels-onnx/src/: lib.rs
crates/zen-memory/: Cargo.toml
crates/zen-memory/src/: lib.rs
crates/zen-memory/src/flexload/: candle_device.rs  device_stage.rs  error.rs  layer_cache.rs  layer_streamer.rs  layer_weights.rs  memory_budget.rs  mod.rs  safetensor_store.rs
crates/zen-multimodal/: Cargo.toml
crates/zen-multimodal/src/: lib.rs
crates/zen-multimodal/src/audio/: mod.rs
crates/zen-multimodal/src/vision/: mod.rs  transforms.rs
crates/zen-orchestrator/: Cargo.toml
crates/zen-orchestrator/src/: lib.rs
crates/zen-orchestrator/src/planner/: mod.rs
crates/zen-orchestrator/src/queue/: mod.rs
crates/zen-orchestrator/src/routing/: mod.rs
crates/zen-orchestrator/src/scheduler/: mod.rs
crates/zen-python/: Cargo.toml  generate_wheels.sh  pyproject.toml  zentrix.pyi
crates/zen-python/src/: anymoe.rs  code_execution.rs  files.rs  lib.rs  requests.rs  stream.rs  util.rs  which.rs
crates/zen-telemetry/: Cargo.toml
crates/zen-telemetry/src/: lib.rs
crates/zen-vector/: Cargo.toml
crates/zen-vector/benches/: search_bench.rs
crates/zen-vector/src/: encode.rs  error.rs  id_map.rs  index.rs  io.rs  lib.rs  metrics.rs  pack.rs  provider.rs  search.rs
crates/zen-vector/src/storage/: json.rs  lance.rs  memory.rs  mod.rs
(+228 files in other folders)
