[package]
name = "zen-api"
readme = "../README.md"
authors = ["Eric Buehler", "ZenLLM Team"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["tokio"] }
candle-core.workspace = true
data-url.workspace = true
either.workspace = true
futures.workspace = true
image.workspace = true
indexmap.workspace = true
itertools.workspace = true
base64.workspace = true
zen-core = { workspace = true, features = [
  "utoipa",
] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
url.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"], optional = true }
uuid = { workspace = true, features = ["v4"] }

accelerate-src = { workspace = true, optional = true }
intel-mkl-src = { workspace = true, optional = true }

[features]
default = ["swagger-ui"]
swagger-ui = ["dep:utoipa-swagger-ui"]
cuda = ["zen-core/cuda"]
cudnn = ["zen-core/cudnn"]
metal = ["zen-core/metal"]
flash-attn = ["cuda", "zen-core/flash-attn"]
flash-attn-v3 = ["cuda", "zen-core/flash-attn-v3"]
accelerate = ["zen-core/accelerate"]
mkl = ["zen-core/mkl"]
nccl = ["zen-core/nccl"]
ring = ["zen-core/ring"]
code-execution = ["zen-core/code-execution"]
