[package]
name = "zen-host"
publish = false
readme = "../README.md"
authors = ["Eric Buehler", "ZenLLM Team"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["tokio"] }
clap.workspace = true
ctrlc.workspace = true
directories.workspace = true
either.workspace = true
indexmap.workspace = true
zen-core.workspace = true
zen-api.workspace = true
regex.workspace = true
rustyline.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rust-mcp-sdk.workspace = true
async-trait.workspace = true
zen-multimodal.workspace = true

[features]
cuda = ["zen-core/cuda", "zen-api/cuda"]
cudnn = ["zen-core/cudnn", "zen-api/cudnn"]
metal = ["zen-core/metal", "zen-api/metal"]
flash-attn = [
  "cuda",
  "zen-core/flash-attn",
  "zen-api/flash-attn",
]
flash-attn-v3 = [
  "cuda",
  "zen-core/flash-attn-v3",
  "zen-api/flash-attn-v3",
]
accelerate = ["zen-core/accelerate", "zen-api/accelerate"]
mkl = ["zen-core/mkl", "zen-api/mkl"]
nccl = ["zen-core/nccl", "zen-api/nccl"]
ring = ["zen-core/ring", "zen-api/ring"]
mcp-server = ["rust-mcp-sdk/server", "rust-mcp-sdk/hyper-server"]
