[package]
name = "zen-multimodal"
readme = "../README.md"
authors = ["Eric Buehler", "ZenLLM Team"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
hound.workspace = true
symphonia.workspace = true
apodize.workspace = true
candle-core.workspace = true
image.workspace = true
rayon.workspace = true
