[package]
name = "zen-telemetry"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tracing = { workspace = true }
metrics = { workspace = true }
